# try

./: .gitignore  .gitmodules  settings.gradle.kts
.github/workflows/: android-ci.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/crypto/: aes_xts.cpp  aes_xts.h  disk_decryptor.cpp  disk_decryptor.h  keyslot_engine.cpp  keyslot_engine.h
app/src/main/cpp/fs/: fs_utils.cpp  fs_utils.h  luks_blockdev.cpp  luks_blockdev.h
app/src/main/cpp/io/: container_reader.cpp  container_reader.h
app/src/main/cpp/luks/: luks2_parser.cpp  luks2_parser.h
app/src/main/java/com/app/: MainActivity.kt  NativeBridge.kt
app/src/main/res/values/: strings.xml  themes.xml
